# cmake-log

./: .gitignore  CMakeLists.txt  Makefile  test.sh
Demo/: CMakeLists.txt  main.cpp  mainshared.cpp
include/Log/: Log.hpp  Log_Info.hpp
include/Output/: Output.hpp  Output_Console.hpp
src/: CMakeLists.txt
src/Log/: CMakeLists.txt  Log.cpp
src/Output/: CMakeLists.txt  Output.cpp  Output_Console.cpp
